# replay

./: .gitignore  README.md  RULES.md  SKILLS.md  directory_structure.md  trading-research-platform-roadmap (1).md
.github/workflows/: build.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/ai/: analyzer.py  strategy_generator.py
backend/app/alerts/: engine.py  models.py  notification.py  telegram.py
backend/app/api/: websocket.py
backend/app/api/routes/: alerts.py  backtest.py  journal.py  market.py  replay.py  scanner.py  strategy.py  watchlist.py
backend/app/core/: config.py  security.py
backend/app/data/: loader.py  symbols.py
backend/app/data/providers/: base.py  binance.py  bist.py  nasdaq.py
backend/app/database/: models.py  sqlite.py
backend/app/engines/: backtest_engine.py  replay_engine.py  scanner_engine.py  strategy_engine.py
backend/app/indicators/: base.py  momentum.py  registry.py  trend.py  volatility.py
backend/app/journal/: models.py  trade_journal.py
backend/app/optimizer/: parameter_search.py
backend/app/reports/: performance_report.py
backend/app/rules/: conditions.py  engine.py  evaluator.py  strategy_models.py
backend/tests/: test_alerts.py  test_rules.py  test_strategy_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build_sidecar.py  download_data.py  update_market.py
storage/alerts/: 0c58c646.json  1fd8a822.json  51cb9cf0.json  75ce03a2.json  ce292370.json  (+2 more)
(+49 files in other folders)
